# DigitalOcean

./: .gitignore  AGENTS.md  DEMO_README.md  README.md  llms.txt
agent/: .env.example  AGENTS.md  auth.py  cost.py  flagship_registry.json  flagships.py  graph.py  graph_brainstorm.py  guardrails.py  llm.py  main.py  model_capabilities.py  pipeline_runtime.py  pyproject.toml  requirements.txt  run_server.py  server.py  sse.py  state.py
agent/.gradient/: agent.yml  model_capabilities.json
agent/council/: advocate.py  architect.py  catalyst.py  guardian.py  scout.py  strategist.py
agent/db/: connection.py  deployment_metrics.py  queries.py  schema.sql  store.py  zp_store.py
agent/evaluations/: metrics.py  runner.py  test_cases.csv
agent/gradient/: __init__.py  a2a.py  a2a_schemas.py  agents.py  mcp_client.py  router.py  versioning.py
agent/nodes/: AGENTS.md  api_contract_generator.py  blueprint.py  brainstorm.py  build_validator.py  code_evaluator.py  code_generator.py  contract_validator.py  decision_gate.py  deploy_gate.py  deployer.py  design_system_generator.py  design_tokens.py  doc_generator.py  enrich.py  experience_agent.py  fix_storm.py  input_processor.py  inspiration_agent.py  layout_archetypes.py  local_runtime_validator.py  motion_tokens.py  per_file_code_generator.py  per_file_prompts.py  per_file_regeneration.py  prompt_strategist.py  pydantic_generator.py  scaffold_generator.py  seed_data.py  spec_freeze_gate.py  task_contracts.py  type_generator.py  type_injection.py  typography.py  vibe_council.py  wiring_validator.py
agent/providers/: base.py  (+6 more)
(+282 files in other folders)
